Add named Rule index dispatch and decouple Task bindings